opam-version: "2.0"
homepage:     "https://github.com/pqwy/tpf"
dev-repo:     "git+https://github.com/pqwy/tpf.git"
bug-reports:  "https://github.com/pqwy/tpf/issues"
doc:          "http://pqwy.github.io/tpf/doc"
author:       "David Kaloper Meršinjak <dk505@cam.ac.uk>"
maintainer:   "David Kaloper Meršinjak <dk505@cam.ac.uk>"
license:      "ISC"
synopsis:     "Minimalist datatype-generic programming"
description:
"Tagless/trivial polytypic functions (Tpf) is a library for datatype-generic
programming in OCaml. It aims to be simple and idiomatic.

Tpf allows you to write functions that work on a wide range of unrelated data
types. Such functions require only the base language, need no runtime, and
seamlessly interoperate with the rest of OCaml. Tpf works in the same stage as
the rest of your program, and doesn't rely on meta-programming.

Tpf has no dependencies and is distributed under the ISC license."

build: [[ "dune" "subst" ] {pinned}
        [ "dune" "build" "-p" name "-j" jobs ]]
depends: [
  "ocaml" {>= "4.05.0"}
  "dune" {build & >= "1.8"}
]
