(library
  (public_name tpf)
  (synopsis "Simple, idiomatic generic programming")
  (wrapped false)
  (modules tpf))

(library
  (public_name tpf.std)
  (name tpf_std)
  (synopsis "Generic representations of common Stdlib types")
  (wrapped false)
  (modules tpf_std)
  (libraries tpf))

(library
  (public_name tpf.fmt)
  (name tpf_fmt)
  (synopsis "Generic Fmt pretty-printers")
  (wrapped false)
  (modules tpf_fmt)
  (optional)
  (libraries tpf fmt))
